tests/baselines/reference/newOperator.errors.txt
==== tests/cases/compiler/newOperator.ts (11 errors) ====
    interface ifc { }
    // Attempting to 'new' an interface yields poor error
    var i = new ifc();
                ~~~
!!! error TS2304: Cannot find name 'ifc'.
    
    // Parens are optional
    var x = new Date;
    var y = new Date();
    
    // Target is not a class or var, good error
    var t1 = new 53();
             ~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    var t2 = new ''();
             ~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    new string;
        ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    
    // Use in LHS of expression?
    (new Date()).toString();
    
    // Various spacing
    var t3 = new string[]( );
                       ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
                 ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    var t4 =
    new
    string
    ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    [
    ~
        ]
    ~~~~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        (
            );
    
    // Unresolved symbol
    var f = new q();
                ~
!!! error TS2304: Cannot find name 'q'.
    
    // not legal
    var t5 = new new Date;
             ~~~~~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    
    // Can be an expression
    new String;
    
    
    module M {
        export class T {
            x: number;
        }
    }
    
    class S {
        public get xs(): M.T[] {
            return new M.T[];
                          ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        }
    }
    